--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -84,7 +84,6 @@
         <None Remove="ConfigMigrations\package20250805_0851.shaconfig" />
         <None Remove="ConfigMigrations\package20250925_1351.shaconfig" />
         <None Remove="ConfigMigrations\package20250811_1431.shaconfig" />
-        <None Remove="ConfigMigrations\package20250821_2018.shaconfig" />
         <None Remove="ConfigMigrations\package20250827_1439.shaconfig" />
         <None Remove="ConfigMigrations\package20250915_1416.shaconfig" />
         <None Remove="ConfigMigrations\package20250909_1553.shaconfig" />
@@ -98,6 +97,7 @@
         <None Remove="ConfigMigrations\package20251026_1137.shaconfig" />
         <None Remove="ConfigMigrations\package20251027_1520.shaconfig" />
         <None Remove="ConfigMigrations\package20251027_1622.shaconfig" />
+        <None Remove="ConfigMigrations\package20251028_1950.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -148,6 +148,7 @@
         <EmbeddedResource Include="ConfigMigrations\package20250801_0955.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250805_0851.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20251027_1622.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20251028_1950.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
