--- a/shesha-core/src/Shesha.Web.Host/appsettings.json
+++ b/shesha-core/src/Shesha.Web.Host/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
+  "DbmsType": "PostgreSql",
   "ConnectionStrings": {
-    "Default": "Data Source=.; Initial Catalog=function-shesha-test;Integrated Security=SSPI;TrustServerCertificate=True;"
+    "Default": "Host=127.0.0.1;Port=5432;Database=shesha;Username=postgres;Password=123qwe;TrustServerCertificate=True;Include Error Detail=True;Pooling=true;Minimum Pool Size=0;Maximum Pool Size=1000;"
   },
   "App": {
     "ServerRootAddress": "http://sheshacore-demo.boxfusion.co.za",
