fix: ordering and removing unused files

--- a/shesha-starter/backend/src/ShaCompanyName.ShaProjectName.Web.Core/ShaCompanyName.ShaProjectName.Web.Core.csproj
+++ b/shesha-starter/backend/src/ShaCompanyName.ShaProjectName.Web.Core/ShaCompanyName.ShaProjectName.Web.Core.csproj
@@ -45,8 +45,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Module\ShaCompanyName.ShaProjectName.Application\ShaCompanyName.ShaProjectName.Application.csproj" />
-    <ProjectReference Include="..\Module\ShaCompanyName.ShaProjectName.Domain\ShaCompanyName.ShaProjectName.Domain.csproj" />
+    <ProjectReference Include="..\ShaCompanyName.ShaProjectName.Application\ShaCompanyName.ShaProjectName.Application.csproj" />
+    <ProjectReference Include="..\ShaCompanyName.ShaProjectName.Domain\ShaCompanyName.ShaProjectName.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Authorization\" />
   </ItemGroup>
 
 </Project>
