--- a/shesha-starter/publicportal/package.json
+++ b/shesha-starter/publicportal/package.json
@@ -24,13 +24,14 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@microsoft/applicationinsights-react-js": "^3.1.2",
     "@microsoft/applicationinsights-web": "^2.6.2",
-    "@microsoft/signalr": "^5.0.6",
+    "@microsoft/signalr": "^8.0.0",
     "@next/bundle-analyzer": "^14.1.0",
-    "@shesha-io/reactjs": "0.35.0",
-    "@types/react-dom": "^18.2.4",
-    "antd": "5.13.3",
-    "antd-style": "^3.6.1",
-    "axios": "^0.21.1",
+    "@shesha-io/pd-feedback": "^0.0.0-build94072",
+    "@shesha-io/pd-publicportal": "0.8.7",
+    "@shesha-io/reactjs": "0.43.15",
+    "antd": "5.17.4",
+    "antd-style": "3.6.2",
+    "axios": "^1.7.2",
     "camelcase": "^6.2.0",
     "config": "^3.3.6",
     "file-saver": "^2.0.5",
@@ -39,8 +40,8 @@
     "jodit": "^4.0.6",
     "less": "^4.2.0",
     "nanoid": "^3.1.23",
-    "next": "^14.1.0",
-    "next-nprogress-bar": "^2.1.2",
+    "next": "^14.2.4",
+    "next-nprogress-bar": "^2.3.12",
     "next-with-less": "^3.0.1",
     "npm": "^9.5.0",
     "nprogress": "^0.2.0",
@@ -57,7 +58,8 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.0",
     "@testing-library/react": "^11.2.3",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "@types/redux-actions": "^2.3.1",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
