--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -83,6 +83,7 @@
         <None Remove="ConfigMigrations\package20250805_0851.shaconfig" />
         <None Remove="ConfigMigrations\package20250925_1351.shaconfig" />
         <None Remove="ConfigMigrations\package20251111_1724.shaconfig" />
+        <None Remove="ConfigMigrations\package20251113_1504.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -135,6 +136,7 @@
         <EmbeddedResource Include="ConfigMigrations\package20250805_0851.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250925_1351.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20251111_1724.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20251113_1504.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
