updating form template header styling and alignment of Child table accessories

--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -86,6 +86,7 @@
         <None Remove="ConfigMigrations\package20251113_1457.shaconfig" />
         <None Remove="ConfigMigrations\package20251113_1533.shaconfig" />
         <None Remove="ConfigMigrations\package20251113_1323.shaconfig" />
+        <None Remove="ConfigMigrations\package20251113_2148.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -141,6 +142,7 @@
         <EmbeddedResource Include="ConfigMigrations\package20251113_1457.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20251113_1533.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20251113_1323.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20251113_2148.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
