--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -94,6 +94,7 @@
         <None Remove="ConfigMigrations\package20250805_1824.shaconfig" />
         <None Remove="ConfigMigrations\package20250910_1639.shaconfig" />
         <None Remove="ConfigMigrations\package20251106_1458.shaconfig" />
+        <None Remove="ConfigMigrations\package20251121_0746.shaconfig" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="ConfigMigrations\package20240201_1221.shaconfig" />
@@ -149,6 +150,7 @@
         <EmbeddedResource Include="ConfigMigrations\package20250805_1824.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250910_1639.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20251106_1458.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20251121_0746.shaconfig" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="AsyncFixer" Version="1.6.0">
