DB and class generation error handler at application startup

--- a/shesha-functional-tests/backend/src/Boxfusion.SheshaFunctionalTests.Web.Host/log4net.config
+++ b/shesha-functional-tests/backend/src/Boxfusion.SheshaFunctionalTests.Web.Host/log4net.config
@@ -22,6 +22,21 @@
             <stringToMatch value="RabbitMQ" />
         </filter>
     </appender>
+
+    <!-- Elmah -->
+    <appender name="ElmahAppender" type="Shesha.Elmah.ElmahAppender, Shesha.Elmah">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [thread] %-5level %logger - %message%newline" />
+      </layout>
+      <!--
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="ERROR" />
+        <levelMax value="FATAL" />
+      </filter>
+      -->
+      <UseNullContext>False</UseNullContext>
+    </appender>
+  
  <!--
   <appender name="DebugSQL" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
@@ -38,7 +53,7 @@
   </logger>
 -->
 
-  <appender name="ReferenceListBootstrapperFileAppender" type="log4net.Appender.RollingFileAppender">
+    <appender name="ReferenceListBootstrapperFileAppender" type="log4net.Appender.RollingFileAppender">
         <file type="log4net.Util.PatternString">
             <converter>
                 <name value="fileName" />
@@ -62,6 +77,7 @@
     </logger>
     <root>
         <appender-ref ref="RollingFileAppender"/>
+        <appender-ref ref="ElmahAppender" />
         <level value="WARN" />
     </root>
 </log4net>
