--- a/shesha-core/src/Shesha.Web.Host/appsettings.json
+++ b/shesha-core/src/Shesha.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Data Source=.; Initial Catalog=frwk_41;Integrated Security=SSPI;TrustServerCertificate=True;"
+     "Default": "Server=localhost,1433;Initial Catalog=ShaProjectName;Persist Security Info=False;User ID=sa;Password=@123Shesha;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "App": {
     "ServerRootAddress": "http://sheshacore-demo.boxfusion.co.za",
