--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -103,6 +103,7 @@
         <None Remove="ConfigMigrations\package20251127_1643.shaconfig" />
         <None Remove="ConfigMigrations\package20251204_0017.shaconfig" />
         <None Remove="ConfigMigrations\package20251218_1817.shaconfig" />
+        <None Remove="ConfigMigrations\package20251226_1112.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -158,6 +159,7 @@
 		<EmbeddedResource Include="ConfigMigrations\package20251127_1643.shaconfig" />
 		<EmbeddedResource Include="ConfigMigrations\package20251204_0017.shaconfig" />
 		<EmbeddedResource Include="ConfigMigrations\package20251218_1817.shaconfig" />
+		<EmbeddedResource Include="ConfigMigrations\package20251226_1112.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
