--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -105,11 +105,15 @@
         <None Remove="ConfigMigrations\package20251218_1817.shaconfig" />
         <None Remove="ConfigMigrations\package20251226_1112.shaconfig" />
         <None Remove="ConfigMigrations\package20251229_0936.shaconfig" />
+        <None Remove="ConfigMigrations\package20251229_1151.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
         <None Remove="ConfigMigrations\package20231105_1942.shaconfig" />
         <None Remove="ConfigMigrations\package20250805_1824.shaconfig" />
+    </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Include="ConfigMigrations\package20251229_1151.shaconfig" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="ConfigMigrations\package20240201_1221.shaconfig" />
