fix: fix modules handling in ReferenceListBootstrapper

--- a/shesha-core/src/Directory.Build.props
+++ b/shesha-core/src/Directory.Build.props
@@ -11,10 +11,11 @@
         <!-- Include symbol files (*.pdb) in the built .nupkg -->
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
     </PropertyGroup>
-    <ItemGroup>
+    <!--<ItemGroup>
 		<PackageReference Include="SheshaCodeAnalyzers" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
     </ItemGroup>
+	-->
 </Project>
