--- a/shesha-core/test/Directory.Build.props
+++ b/shesha-core/test/Directory.Build.props
@@ -4,10 +4,11 @@
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<NoWarn>$(NoWarn);CS1591;612;618;809;AsyncFixer01;8618;</NoWarn>		
 	</PropertyGroup>
-    <ItemGroup>
+    <!--<ItemGroup>
 		<PackageReference Include="SheshaCodeAnalyzers" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
     </ItemGroup>
+	-->
 </Project>
