--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -106,6 +106,7 @@
         <None Remove="ConfigMigrations\package20251226_1112.shaconfig" />
         <None Remove="ConfigMigrations\package20251229_0936.shaconfig" />
         <None Remove="ConfigMigrations\package20251229_1151.shaconfig" />
+        <None Remove="ConfigMigrations\package20260112_2017.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -166,6 +167,7 @@
 		<EmbeddedResource Include="ConfigMigrations\package20251218_1817.shaconfig" />
 		<EmbeddedResource Include="ConfigMigrations\package20251226_1112.shaconfig" />
 		<EmbeddedResource Include="ConfigMigrations\package20251229_0936.shaconfig" />
+		<EmbeddedResource Include="ConfigMigrations\package20260112_2017.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
