--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -112,6 +112,7 @@
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
         <None Remove="ConfigMigrations\package20231105_1942.shaconfig" />
         <None Remove="ConfigMigrations\package20250805_1824.shaconfig" />
+        <None Remove="ConfigMigrations\package20260114_1027.shaconfig" />
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Include="ConfigMigrations\package20251229_1151.shaconfig" />
@@ -172,6 +173,7 @@
         <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
         <EmbeddedResource Include="ConfigMigrations\package20250805_1824.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20260114_1027.shaconfig" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="AsyncFixer" Version="1.6.0">
