84451 Hide Configuration Items From the Modules That are Disabled and not Editable

--- a/shesha-functional-tests/backend/src/Boxfusion.SheshaFunctionalTests.Web.Core/Boxfusion.SheshaFunctionalTests.Web.Core.csproj
+++ b/shesha-functional-tests/backend/src/Boxfusion.SheshaFunctionalTests.Web.Core/Boxfusion.SheshaFunctionalTests.Web.Core.csproj
@@ -70,6 +70,7 @@
     <ProjectReference Include="..\..\..\..\shesha-core\src\Shesha.Web.FormsDesigner\Shesha.Web.FormsDesigner.csproj" />
     <ProjectReference Include="..\Boxfusion.SheshaFunctionalTests.Common.Application\Boxfusion.SheshaFunctionalTests.Common.Application.csproj" />
     <ProjectReference Include="..\Module\Boxfusion.SheshaFunctionalTests.Common.Domain\Boxfusion.SheshaFunctionalTests.Common.Domain.csproj" />
+    <ProjectReference Include="..\Module\Boxfusion.SheshaFunctionalTests.DisabledModule\Boxfusion.SheshaFunctionalTest.DisabledModule\Boxfusion.SheshaFunctionalTest.DisabledModule.csproj" />
     <ProjectReference Include="..\Module\Boxfusion.SheshaFunctionalTests.ModuleA\Boxfusion.SheshaFunctionalTests.ModuleA.csproj" />
     <ProjectReference Include="..\Module\Boxfusion.SheshaFunctionalTests.ModuleB\Boxfusion.SheshaFunctionalTests.ModuleB.csproj" />
   </ItemGroup>
