--- a/shesha-core/src/Shesha.Framework/Shesha.Framework.csproj
+++ b/shesha-core/src/Shesha.Framework/Shesha.Framework.csproj
@@ -120,6 +120,7 @@
         <PackageReference Include="EasyNetQ" Version="8.0.1" />
         <PackageReference Include="FluentMigrator" Version="5.0.0" />
         <PackageReference Include="FluentValidation" Version="11.8.1" />
+        <PackageReference Include="Hangfire.Core" Version="1.8.6" />
         <PackageReference Include="IDisposableAnalyzers" Version="4.0.8">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
