--- a/shesha-reactjs/package.json
+++ b/shesha-reactjs/package.json
@@ -198,6 +198,7 @@
     "react-split": "^2.0.14",
     "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.7.0",
+    "react-window": "^2.2.5",
     "remark-gfm": "^3.0.1",
     "tree-to-list": "^3.0.2",
     "use-debounce": "^6.0.1"
