feat: scheduled jobs refactoring
(cherry picked from commit 6cb8aa665b299bf5140c9a9e9bc14f0079098b95)

# Conflicts:
#	shesha-core/src/Shesha.Application/StoredFiles/StoredFileController.cs
#	shesha-core/src/Shesha.Framework/Bootstrappers/ReferenceListBootstrapper.cs
#	shesha-core/src/Shesha.Framework/Scheduler/ScheduledJobBase.cs
#	shesha-core/src/Shesha.Import/ImportApplicationService.cs
#	shesha-core/src/Shesha.Scheduler/IScheduledJobManager.cs
#	shesha-core/src/Shesha.Scheduler/ScheduledJobManager.cs
#	shesha-core/src/Shesha.Scheduler/Services/ScheduledJobs/ScheduledJobAppService.cs
#	shesha-functional-tests/adminportal/package-lock.json
#	shesha-functional-tests/adminportal/shesha-local.tgz
#	shesha-reactjs/src/designer-components/scheduledJobExecutionLog/scheduledJobExecution.tsx
#	shesha-reactjs/src/designer-components/scheduledJobExecutionLog/scheduledJobExecutionLog.tsx
#	shesha-reactjs/src/designer-components/scheduledJobExecutionLog/utils.ts
#	shesha-reactjs/src/providers/form/store/shaFormInstance.tsx
#	shesha-reactjs/src/providers/scheduledJobExecution/actions.ts
#	shesha-reactjs/src/providers/scheduledJobExecution/contexts.ts
#	shesha-reactjs/src/providers/scheduledJobExecution/index.tsx
#	shesha-reactjs/src/providers/scheduledJobExecution/reducer.ts

--- a/shesha-reactjs/package.json
+++ b/shesha-reactjs/package.json
@@ -198,6 +198,7 @@
     "react-split": "^2.0.14",
     "react-syntax-highlighter": "^15.6.1",
     "react-table": "^7.7.0",
+    "react-window": "^2.2.5",
     "remark-gfm": "^3.0.1",
     "scheduler": "^0.26.0",
     "tree-to-list": "^3.0.2",
