--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -77,6 +77,7 @@
     <None Remove="ConfigMigrations\package20250130_1900.shaconfig" />
     <None Remove="ConfigMigrations\package20250212_0911.shaconfig" />
     <None Remove="ConfigMigrations\package20260128_1235.shaconfig" />
+    <None Remove="ConfigMigrations\package20260130_0934.shaconfig" />
     <None Remove="Excel\template.xlsx" />
     <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
     <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -121,6 +122,7 @@
     <EmbeddedResource Include="ConfigMigrations\package20250130_1900.shaconfig" />
     <EmbeddedResource Include="ConfigMigrations\package20250212_0911.shaconfig" />
     <EmbeddedResource Include="ConfigMigrations\package20260128_1235.shaconfig" />
+    <EmbeddedResource Include="ConfigMigrations\package20260130_0934.shaconfig" />
     <EmbeddedResource Include="Excel\template.xlsx" />
     <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
     <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
