feat: built-in forms review
- removed all legacy Shesha forms, added a single package with verified forms
- updated empty DB of starter project
- Configuration Studio: applied default form for items renaming: `shesha/cs-item-rename`
- fixed initialization of submodules in ConfigurableModuleBootstrapper

--- a/shesha-core/src/Shesha.Web.Host/log4net.config
+++ b/shesha-core/src/Shesha.Web.Host/log4net.config
@@ -31,7 +31,7 @@
   </appender>
 
   
-  <appender name="DebugSQL" type="log4net.Appender.TraceAppender">
+  <!--<appender name="DebugSQL" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
     </layout>
@@ -39,7 +39,7 @@
   <logger name="NHibernate.SQL">
     <level value="DEBUG"/>
     <appender-ref ref="DebugSQL"/>
-  </logger>
+  </logger>-->
     
   <logger name="ErrorLogger">
     <appender-ref ref="ErrorTextLog"/>
