--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -110,6 +110,7 @@
         <None Remove="ConfigMigrations\package20260115_1424.shaconfig" />
         <None Remove="ConfigMigrations\package20260127_0953.shaconfig" />
         <None Remove="ConfigMigrations\package20260129_2214.shaconfig" />
+        <None Remove="ConfigMigrations\package20260202_1055.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -119,69 +120,8 @@
         <None Remove="ConfigMigrations\package20260114_1027.shaconfig" />
     </ItemGroup>
     <ItemGroup>
-      <EmbeddedResource Include="ConfigMigrations\package20251229_1151.shaconfig" />
-    </ItemGroup>
-    <ItemGroup>
-        <EmbeddedResource Include="ConfigMigrations\package20240201_1221.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240208_1429.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240216_0954.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240506_0847.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240521_0550.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240607_1046.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240612_1013.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240617_1445.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240710_1635.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240717_0924.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240717_0925.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240718_0640.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240718_0641.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240815_1811.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240823_2001.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240828_1347.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240828_1548.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240830_1554.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240903_1611.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240904_1418.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240910_0924.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20240918_1815.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241006_0651.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241014_0926.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241104_1722.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241113_1549.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241125_1110.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241203_1422.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241211_1520.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241210_2046.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241211_1616.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20241218_1705.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250121_1158.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250127_1206.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250127_1510.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250130_1900.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250212_0911.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250228_1711.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250618_1441.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250704_1203.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250801_0955.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250805_0851.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20251027_1622.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20251030_1025.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20251113_2148.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20251127_1643.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20251204_0017.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20251218_1817.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20251226_1112.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20251229_0936.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20260112_2017.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20260115_1424.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20260127_0953.shaconfig" />
-		<EmbeddedResource Include="ConfigMigrations\package20260129_2214.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20260202_1055.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
-        <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20250805_1824.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20260119_1719.shaconfig" />
-        <EmbeddedResource Include="ConfigMigrations\package20260114_1027.shaconfig" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="AsyncFixer" Version="1.6.0">
