--- a/shesha-core/src/Shesha.Web.Host/appsettings.json
+++ b/shesha-core/src/Shesha.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Data Source=.; Initial Catalog=frwk_41;Integrated Security=SSPI;TrustServerCertificate=True;"
+    "Default": "Data Source=.; Initial Catalog=ShaProjectName;Integrated Security=SSPI;TrustServerCertificate=True;"
   },
   "App": {
     "ServerRootAddress": "http://sheshacore-demo.boxfusion.co.za",
