Update styling and settings for CollapsiblePanel component
- Refined border styling in the StyledCollapse component for better visual consistency.
- Added a version field to the settings form for the CollapsiblePanel, enhancing configuration tracking.

--- a/shesha-reactjs/src/designer-components/collapsiblePanel/settingsForm.json
+++ b/shesha-reactjs/src/designer-components/collapsiblePanel/settingsForm.json
@@ -179,7 +179,8 @@
             "parentId": "b8954bf6-f76d-4139-a850-c99bf06c8b69",
             "hidden": false,
             "isDynamic": false,
-            "description": "Make the primary colored border visible"
+            "description": "Make the primary colored border visible",
+            "version": 1
           },
           {
             "id": "6bac1a1f-67a2-48b5-a11e-b474e30d282e",
