Improve Monaco Editor setup: type safety, performance, and maintainability
- Remove console mutation that affected entire application and caused empty warnings
- Replace 'any' type with proper Monaco Environment interface for type safety
- Add enableEagerModelSync prop (defaults to false) for better performance
- Remove unused copy-monaco-workers.js script
- Add clean-public-monaco script to all packages using Node.js built-in fs.rmSync
- Remove monorepo-relative path fallbacks from postinstall scripts
- Fix postinstall to run in shesha-reactjs itself for development IntelliSense
- Guard loader.config with browser check to prevent SSR failures

These changes address code review feedback and improve Monaco Editor integration
across all packages while maintaining backward compatibility.

--- a/shesha-reactjs/package.json
+++ b/shesha-reactjs/package.json
@@ -28,12 +28,13 @@
     "lint": "eslint",
     "lint-errors": "eslint --quiet",
     "lint-fix": "eslint --fix",
-    "dev": "npm run postinstall && next dev",
+    "dev": "next dev",
     "build-next": "next build",
     "start-next": "cross-env NODE_ENV=production node --max-old-space-size=8192 server.js",
     "prepare": "husky",
     "type-check": "tsc --build tsconfig.strictNulls.json",
-    "postinstall": "node scripts/postinstall.js || true"
+    "postinstall": "node scripts/postinstall.js || true",
+    "clean-public-monaco": "node -e \"require('fs').rmSync('public/monaco', {recursive: true, force: true})\""
   },
   "overrides": {
     "rc-resize-observer": "1.4.0",
