--- a/shesha-starter/frontend/package.json
+++ b/shesha-starter/frontend/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "npm run postinstall && next dev",
+    "dev": "next dev",
     "build": "npm run postinstall && next build",
     "export": "next export",
     "start": "NODE_ENV=production node --max-old-space-size=8192 server.js",
@@ -15,7 +15,8 @@
     "lint": "eslint **/*.{js,jsx,ts,tsx}",
     "prettier": "prettier --write **/*.{js,jsx,ts,tsx}",
     "test": "jest -c test/jest.config.js",
-    "postinstall": "node node_modules/@shesha-io/reactjs/scripts/postinstall.js || node ../../shesha-reactjs/scripts/postinstall.js || true"
+    "postinstall": "node node_modules/@shesha-io/reactjs/scripts/postinstall.js || true",
+    "clean-public-monaco": "node -e \"require('fs').rmSync('public/monaco', {recursive: true, force: true})\""
   },
   "publishConfig": {
     "registry": "https://pkgs.dev.azure.com/boxfusion/_packaging/npm.shesha.dev/npm/registry/"
