--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -111,6 +111,7 @@
         <None Remove="ConfigMigrations\package20260127_0953.shaconfig" />
         <None Remove="ConfigMigrations\package20260129_2214.shaconfig" />
         <None Remove="ConfigMigrations\package20260202_1055.shaconfig" />
+        <None Remove="ConfigMigrations\package20260209_2056.shaconfig" />
         <None Remove="Excel\template.xlsx" />
         <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
         <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -121,6 +122,7 @@
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="ConfigMigrations\package20260202_1055.shaconfig" />
+        <EmbeddedResource Include="ConfigMigrations\package20260209_2056.shaconfig" />
         <EmbeddedResource Include="Excel\template.xlsx" />
     </ItemGroup>
     <ItemGroup>
