--- a/shesha-core/.nuget/NuGet.Config
+++ b/shesha-core/.nuget/NuGet.Config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<!--﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <config>
     <add key="repositoryPath" value="..\..\_packages" />
@@ -6,6 +6,20 @@
   <packageSources>
     <clear />
 	<add key="local-packages" value="..\local-packages" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
+    <add key="ImageSharp" value="https://www.myget.org/F/imagesharp/api/v3/index.json" />
+  </packageSources>
+  <solution>
+    <add key="disableSourceControlIntegration" value="true" />
+  </solution>
+</configuration>
+-->
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <packageSources>
+    <clear />
+	<add key="local-packages" value="../s/shesha-core/local-packages" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
     <add key="ImageSharp" value="https://www.myget.org/F/imagesharp/api/v3/index.json" />
