feat: add explicit useAutoLogoff toggle to security settings

--- a/shesha-core/src/Shesha.Application/Shesha.Application.csproj
+++ b/shesha-core/src/Shesha.Application/Shesha.Application.csproj
@@ -80,6 +80,7 @@
     <None Remove="ConfigMigrations\package20260129_1359.shaconfig" />
     <None Remove="ConfigMigrations\package20260130_0934.shaconfig" />
     <None Remove="ConfigMigrations\package20260203_0728.shaconfig" />
+    <None Remove="ConfigMigrations\package20260218_0844.shaconfig" />
     <None Remove="Excel\template.xlsx" />
     <None Remove="ConfigMigrations\package20230324_1835.shaconfig" />
     <None Remove="ConfigMigrations\package20230411_1238.shaconfig" />
@@ -127,6 +128,7 @@
     <EmbeddedResource Include="ConfigMigrations\package20260129_1359.shaconfig" />
     <EmbeddedResource Include="ConfigMigrations\package20260130_0934.shaconfig" />
     <EmbeddedResource Include="ConfigMigrations\package20260203_0728.shaconfig" />
+    <EmbeddedResource Include="ConfigMigrations\package20260218_0844.shaconfig" />
     <EmbeddedResource Include="Excel\template.xlsx" />
     <EmbeddedResource Include="ConfigMigrations\package20230324_1835.shaconfig" />
     <EmbeddedResource Include="ConfigMigrations\package20230411_1238.shaconfig" />
