--- a/shesha-core/src/Shesha.Testing/Shesha.Testing.csproj
+++ b/shesha-core/src/Shesha.Testing/Shesha.Testing.csproj
@@ -33,6 +33,6 @@
     <PackageReference Include="Testcontainers.PostgreSql" Version="4.4.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.extensibility.execution" Version="2.9.3" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
   </ItemGroup>
 </Project>
